@startuml Diagramme de classe
skinparam defaultFontName Courier 10 Pitch

class BitStuffer {
    {static} +stuff(bitstring: String): String
    {static} +destuff(bitstring: String): String
}

class CheckSumCalculator {
    {static} +computeCRC(bitstring: String, polynomial: String): String
    {static} -padLeft(str: String, pad: char, targetLength: int): String
    {static} -xor(s1: String, s2: String): String
    {static} -cyclicDivisionRest(bitstring: String, polynomial: String): String
}

class CharFrame {
    {static} +TYPE_BITSIZE: int
    {static} +NUM_BITSIZE: int
    {static} +CRC_BITSIZE: int
    {static} +FLAG_BITSIZE: String
    -type: String
    -num: String
    -data: String
    -crc: String
    -polynomial: String

	+CharFrame(flag:char, type:char, num:char, data:String, polynomial:String)
	+CharFrame(frame:String)
    +getType(): char
    +setType(type: char)
    +getNum(): int
    +setNum(num: int)
    +getData(): String
    +setData(data: String)
    +format(): String
    +isValid(): boolean
    {static} -padLeft(str: String, pad: char, targetLength: int): String
    -computeCRC()
}

class FrameFileReader {
    -reader: BufferedReader
    -polynomial: String

    +FrameFileReader(filename: String, polynomial: String)
    +getNextFrame(): CharFrame
}

Class Receiver {
    {static} +CRC_CCITT: String
    {static} +WINDOW_SIZE: int
    {static} +MAX_NUM: int
    
    +listen(int: portNumber)
    +close()
    -sendReceipt(type: char, num: int)
}

Class Sender {
    {static} +CRC_CCITT: String
    {static} +WINDOW_SIZE: int
    {static} +MAX_NUM: int
    {static} +TIMEOUT_DELAY: int
    -sentFrames: LinkedList<CharFrame>
    -nextFrameNum: int

    +send(hostName: String, portNumber: int, filename: String) 
}

class PollTask {
    -out: PrintWriter
    +PollTask(out: PrintWriter)
    +run()
}

Class CLI {
    {static} +main()
}

Class Test {
    {static} +TEST_PORT: int
    {static} +REC_PORT: int

    +randError(s: String): String
    +runTests()
}

CLI --> Test
Test --> Receiver
Test --> Sender

CLI --> Receiver
CLI --> Sender

Receiver --> CharFrame
Sender --> CharFrame
Sender --> FrameFileReader
Sender --> PollTask

FrameFileReader --> CharFrame
PollTask --> CharFrame

CharFrame --> BitStuffer
CharFrame --> CheckSumCalculator

@enduml
